tests/ui/not-quotable.stderr
error[E0277]: the trait bound `Ipv4Addr: ToTokens` is not satisfied
  --> tests/ui/not-quotable.rs:6:13
   |
6  |     let _ = quote! { #ip };
   |             ^^^^^^^^^^^^^^ the trait `ToTokens` is not implemented for `Ipv4Addr`
   |
note: required by `to_tokens`
  --> src/to_tokens.rs
   |
   |     fn to_tokens(&self, tokens: &mut TokenStream);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::quote_token_with_context` (in Nightly builds, run with -Z macro-backtrace for more info)
